--- a/Oct '18 Web Launch.org
+++ b/Oct '18 Web Launch.org
@@ -846,19 +846,35 @@ Upon returning Joe began a Virtual Reality Studio, Nova Media, out of his apartm
 
 ## Jacques Lalo - Art Director
 
-Born and raised in Paris, Jacques left the city at age 19, enrolling as a pre-med student in the south of France. The study of the human body deepened his understanding of design. The functionality of the lungs, the power of the heart, the connectivity of the muscular system, and all the body's coherency led him back to his home city and to the study of architectural design. At Ecole Bleue, he mastered the core principles of design and began seeing the world through his deep understanding of this discipline. Along the way he became an expert in Blender, the most complex 3D software environment driving Virtual Reality asset creation. 
+Born and raised in Paris, Jacques left the city at age 19, enrolling as a pre-med student in the south of France. It was the most beautiful design imaginable. The functionality of the lungs, the power of the heart, the connectivity of the muscular system, and all the body's coherency led him back to his home city and to the study of architectural design. At Ecole Bleue, he mastered the discipline and began experiencing the world through his deepening understanding of design. Along the way he became an expert in Blender, the most complex 3D software environment driving virtual reality asset creation. 
 
-In the summer of 2017, Jacques arrived in Brooklyn and became one of Nova's founding members. Thanks to his intricate understanding of brand creation, the story of Nova deepened. Its 3D logo and graphic charter were born, and its image solidified. Novamedia.nyc features Jacques' hand-crafted visuals, each inspired by his understanding of design, advanced technology, and extended reality as an emerging market.
+In the summer of 2017, Jacques arrived in Brooklyn and quickly became one of Nova's founding members. Thanks to his intricate understanding of brand creation, the story of Nova deepened. Its 3D logo and graphic charter were born, and its image solidified. Novamedia.nyc features Jacques' hand-crafted visuals, each inspired by his understanding of design, advanced technology, and extended reality as an emerging market.
 
-He recently, under the Nova brand name, designed each of the characters for a Google-backed 360 experience called Armonia. Only as XR begins attracting more artists of his caliber will it blossom. 
+He recently, under the Nova brand name, designed each of the characters for a Google-backed immersive 360 experience called Armonia. Only as XR begins attracting more artists of his caliber will it blossom. 
 
 ## Kyle Kesses - Marketing Director
 
-Six months after graduating from Fordham University, Kyle became a writer and on-camera broadcaster for the New York Yankees. As part of a their in-house production team, he wrote and voiced an Emmy-winning episodic series in 2016. 
+Six months after graduating from Fordham University, Kyle became a writer and on-camera broadcaster for the New York Yankees. In his final season, as part of a 5-person production team, he wrote and voiced an Emmy-winning episodic series in 2016. 
 
-At the start of 2017, he met Joe and discovered VR. The experience resonated and sent him on an ensuing journey through the history of media and the evolution of mass human connectivity. He traveled through history from the printing press all the way to the smartphone, a journey that led him back to Nova. He became the team's writer and next co-founder, establishing its marketing philosophy and human-to-human connectivity.   
+During extended travel through Latin America, he wrote his first manuscript, a 7-part book of short stories, each chapter introducing the reader to two new characters who are meeting for the first time. The book exists among their homes, minds, and transience as they interact with death, lust, love, violence, and fear. 
+
+Returning to New York, he met Joe at the start of 2017 and discovered VR. The experience resonated and sent him on an ensuing research journey through the history of media and the evolution of mass human connectivity. From the printing press all the way to the smartphone, a journey that led him back to Nova. He became the team's writer and next co-founder, establishing its marketing philosophy and passion for human-to-human connectivity.   
 
 With an affinity for language and voice, Kyle simplifies complex concepts into comprehensive writings, bridging many divides among artists, engineers, and businesses.
+
+Thomas Binetruy - Engineer 
+
+Thomas introduces an extraordinarily global perspective. Born in Egypt and raised among Paris, Houston, and Dubai, he is natively fluent in French and English. Inspired by 20th century giants like Richard Feynman and Albert Eisnstein, he landed at one of the finest engineering schools in the US, Purdue University. 
+
+Purdue owns the airport in West Lafayette, the second most trafficked in the state of Indiana, and this is where Thomas studied, earning his degree in aeronautical engineering. He went on to design hydrogen fuel cell prototypes at Zodiac Aerospace before becoming a consultant at Ailancy in Paris. 
+
+Always engrossed in the process and obsessed with understanding how things work, he could not resist the hands-on opportunity to co-found an advanced technology company. So when Joe, his former classmate at Purdue, showed him Nova's incubating business plan in 2017, Thomas began sourcing his self-taught coding skills and within a year had built novamedia.nyc on React, writing the codebase in JavaScript.
+
+As computer programming continues shifting into 3D, coders like Thomas, with a true engineering background, are leading the way. 
+
+
+
+During spare time, he taught himself to code
 
 ** Partnerships 
 
