--- a/Oct '18 Web Launch.org
+++ b/Oct '18 Web Launch.org
@@ -836,6 +836,7 @@ Nova XR Media is built by four founders. We come from corporate sales, computer 
 
 We produce a range of products enabling users to transcend time and space through virtual worlds and simulated play. Our clients use 3D immersive media to market new products, train students and employees, gamify education, and entertain customers. Nova XR Media guides the development, advises on financial strategies and manages production. Our studio and laboratory is located at the edge of Red Hook, Brooklyn.
 
+
 ## Joe Mecca - CEO
 
 Joe started his career in media and production at Purdue University, where he wrote for the Greek Newspaper. He went on to be the sales director and publisher, expanding circulation from 6,000 to 17,000 weekly, growing sales from $10,000 in annual revenue to $25,000.  
@@ -846,7 +847,7 @@ Upon returning Joe began a Virtual Reality Studio, Nova Media, out of his apartm
 
 ## Jacques Lalo - Art Director
 
-Born and raised in Paris, Jacques left the city at age 19, enrolling as a pre-med student in the south of France. It was the most beautiful design imaginable. The functionality of the lungs, the power of the heart, the connectivity of the muscular system, and all the body's coherency led him back to his home city and to the study of architectural design. At Ecole Bleue, he mastered the discipline and began experiencing the world through his deepening understanding of design. Along the way he became an expert in Blender, the most complex 3D software environment driving virtual reality asset creation. 
+Born and raised in Paris, Jacques left the city at age 19, enrolling as a pre-med student in the south of France. Jacques views the human body as extraordinary design. The functionality of the lungs, the power of the heart, the connectivity of the muscular system, and all the body's coherency inspires his work in VR. Back in Paris, he began studying at Ecole Bleue, mastering architectural design and experiencing the world through his deep understanding of the discipline. Along the way he became an expert in Blender, the most complex 3D software environment driving virtual reality asset creation. 
 
 In the summer of 2017, Jacques arrived in Brooklyn and quickly became one of Nova's founding members. Thanks to his intricate understanding of brand creation, the story of Nova deepened. Its 3D logo and graphic charter were born, and its image solidified. Novamedia.nyc features Jacques' hand-crafted visuals, each inspired by his understanding of design, advanced technology, and extended reality as an emerging market.
 
@@ -856,25 +857,21 @@ He recently, under the Nova brand name, designed each of the characters for a Go
 
 Six months after graduating from Fordham University, Kyle became a writer and on-camera broadcaster for the New York Yankees. In his final season, as part of a 5-person production team, he wrote and voiced an Emmy-winning episodic series in 2016. 
 
-During extended travel through Latin America, he wrote his first manuscript, a 7-part book of short stories, each chapter introducing the reader to two new characters who are meeting for the first time. The book exists among their homes, minds, and transience as they interact with death, lust, love, violence, and fear. 
+During extended travel through Latin America, he wrote his first manuscript, a 7-part book of short stories, each chapter introducing the reader to characters who are meeting for the first time. The book exists among their homes, minds, and transience as they interact with death, lust, love, violence, and fear. 
 
-Returning to New York, he met Joe at the start of 2017 and discovered VR. The experience resonated and sent him on an ensuing research journey through the history of media and the evolution of mass human connectivity. From the printing press all the way to the smartphone, a journey that led him back to Nova. He became the team's writer and next co-founder, establishing its marketing philosophy and passion for human-to-human connectivity.   
+Returning to New York, he met Joe at the start of 2017 and discovered VR. The experience resonated and sent him on an ensuing research journey through the history of media and the evolution of mass human connectivity, a journey that led him back to Nova. He became the team's writer and next co-founder, establishing its marketing philosophy and passion for human-to-human connection.   
 
 With an affinity for language and voice, Kyle simplifies complex concepts into comprehensive writings, bridging many divides among artists, engineers, and businesses.
 
-Thomas Binetruy - Engineer 
+## Thomas Binetruy - Engineer 
 
 Thomas introduces an extraordinarily global perspective. Born in Egypt and raised among Paris, Houston, and Dubai, he is natively fluent in French and English. Inspired by 20th century giants like Richard Feynman and Albert Eisnstein, he landed at one of the finest engineering schools in the US, Purdue University. 
 
-Purdue owns the airport in West Lafayette, the second most trafficked in the state of Indiana, and this is where Thomas studied, earning his degree in aeronautical engineering. He went on to design hydrogen fuel cell prototypes at Zodiac Aerospace before becoming a consultant at Ailancy in Paris. 
+Purdue owns the airport in West Lafayette, the second most trafficked in the state of Indiana, and this is where Thomas earned his degree in aeronautical engineering. He went on to design hydrogen fuel cell prototypes at Zodiac Aerospace before becoming a consultant at Ailancy in Paris. 
 
-Always engrossed in the process and obsessed with understanding how things work, he could not resist the hands-on opportunity to co-found an advanced technology company. So when Joe, his former classmate at Purdue, showed him Nova's incubating business plan in 2017, Thomas began sourcing his self-taught coding skills and within a year had built novamedia.nyc on React, writing the codebase in JavaScript.
+Always engrossed in the process and obsessed with how things work, he could not resist the hands-on opportunity to build an advanced technology company. So when Joe, his former Purdue classmate, shared Nova's incubating business plan in 2017, Thomas began sourcing his self-taught coding skills. Within a year he had built novamedia.nyc on React, writing the codebase in JavaScript.
 
-As computer programming continues shifting into 3D, coders like Thomas, with a true engineering background, are leading the way. 
-
-
-
-During spare time, he taught himself to code
+As computer programming continues shifting into 3D, developers like Thomas, with a true engineering background, will continue leading the way.
 
 ** Partnerships 
 
