--- a/Consultation12-2-18.org
+++ b/Consultation12-2-18.org
@@ -1,11 +1,12 @@
 * Why they need it 
-Businesses need XR consultation because 
 
-1) the technology is niche and nascent 
-The software and hardware needed to create XR content is complex and professional grade. Your internal tech or production teams do not know how to use it and it will be costly to educate them. You can hire an in-house XR production team
-
-there aren't many people who know how to create good XR content, and the most prudent way to build xr is starting with a foundation
+** The technology is niche and nascent 
+The software and hardware used to create and deploy XR content is complex and professional grade. Your internal tech nor production teams do not know how to use it efficiently. In order to create premium XR content you must first unerstand the industry, technology, and state of the market. Strategically building scalable XR content abides by similar principles as digital marketing, internal operations, tech builds, or any other department within your company. It is crucial to begin with a solid foundation. If strategized properly, you can continue building atop the codebase and repurpose the lens-captured assets and 3D models, saving you time and production costs. 
 
 * What it is
+We may deliver consultation in the form of a document, a technical specification, or a series of design assets. Bigger and more forward thinking brands prefer to begin with a five or six-figure program build. Maybe this does not describe you or your project. 
+We will get started by listening to you. You know your company's mode operating, style of marketing, and demographic of clientele. We know XR. Why do you want to build XR? What pain point do you want to ease? Do you have an initial idea? We will begin with an objective, budget, and timeline. Once you 
 
 * How we customize 
+
+there aren't many people who know how to create good XR content, and the most prudent way to build xr is starting with a foundation
