--- a/Consultation12-2-18.org
+++ b/Consultation12-2-18.org
@@ -14,3 +14,16 @@ We will get started by listening to you. You know your company's mode operating,
 Getting started right away? We will build the customized document into the first steps of production. 
 
 Still dipping your toes? We will build your customized consultation document in exchange for between $500 and $1000. Once you have the document, it is yours. If you choose to, you can hire a different studio to build the project. 
+
+..............................
+
+* Old Consultation Text 
+Virtual Reality (VR) and Augmented Reality (AR), fitting under the parent term “Extended Reality”, enhance communication, collaboration, and education. Unlike its predecessors, XR Media is interactive, calling on the user to embody their consciousness.
+
+These technologies will increasingly be in the home, integrating with daily living in the way televisions, computers, and phones already have. As of today, you can engage with simulated environments through your phone (or XR glasses/goggles).
+
+Historical rates of technological adoption suggest that 25% of the people livingin the US will have an AR/VR in their homes within the next five years. It is the next frontier of human connectivity.
+
+In business, XR Media cuts internal costs by providing immersive training programs and business travel alternatives. When used to drive revenue, XR is a natural marketing tool, the backdrop for new age content creation.
+
+XR Media can be the ultimate communication tool or the reason your business falls behind.
