--- a/RevisedBios2019.org
+++ b/RevisedBios2019.org
@@ -17,11 +17,13 @@ He has been leading media campaigns ever since his time at Purdue, where he wrot
 
 
 * Kyle Kesses
-Six months after graduating from Fordham University, Kyle became a writer and on-camera broadcaster for the New York Yankees. In his final season, as part of a 5-person production team, he wrote and voiced an Emmy-winning episodic series in 2016.
+Six months after graduating from Fordham University, Kyle became a writer and on-camera broadcaster for the New York Yankees. In his final season, as part of a 5-person production team, he wrote and voiced an Emmy-winning episodic series documenting the rising young players in the organization. 
 
-During extended travel through Latin America, he wrote his first manuscript, a 7-part book of short stories, each chapter introducing the reader to characters who are meeting for the first time. The book exists among their homes, minds, and transience as they interact with death, lust, love, violence, and fear.
+Inspired by New York's entrepreneurial scene, Kyle sourced his production skills and began his own interview-based show - 15 Minutes. Within the first 18 months of the show, he interviewed a world class aerobatics pilot, a broadway actress, a former major league baseball player, and a gold-medal winning chef. 
 
-Returning to New York, he met Joe at the start of 2017 and discovered VR. The experience resonated and sent him on an ensuing research journey through the history of media and the evolution of mass human connectivity, a journey that led him back to Nova. He became the team's writer and next co-founder, establishing its marketing philosophy and passion for human-to-human connection.
+During extended travel through Latin America, at the start of 2016 he wrote his first manuscript, a 7-part book of short stories, each chapter introducing the reader to characters who are meeting for the first time. The book exists among their homes, minds, and transience as they gain coordination with internal dialogue and exploration of new cultures. 
+
+Returning to New York, Kyle met Joe at the start of 2017 and discovered VR. The experience resonated and sent him on an ensuing research journey through the history of media and the evolution of mass human connectivity. Soon he became Nova's writer and next co-founder, establishing its marketing philosophy and passion for human-to-human connection.
 
 With an affinity for language and voice, Kyle simplifies complex concepts into comprehensive writings, bridging many divides among artists, engineers, and businesses.
 
